--- a/src/Components/Auth/SignUp.css
+++ b/src/Components/Auth/SignUp.css
@@ -1,4 +1,4 @@
-.login {
+.signup {
     text-align: center;
     background-color: #1e1e1e;
     position: absolute;
@@ -7,15 +7,15 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding-bottom: 150px;
+    padding-bottom: 100px;
 }
 
-.login-logo {
+.signup-logo {
     margin: 2px 2px;
     height: 10vmin;
 }
 
-.login-span {
+.signup-span {
     text-align: center;
     background-color: #181818;
     border-radius: 15px;
@@ -27,7 +27,7 @@
     height: 10vmin;
 }
 
-#login-form {
+#signup-form {
     background-color: #1e1e1e;
     border-radius: 4px;
     border: none;
@@ -43,12 +43,12 @@
     width: 300px;
 }
 
-#login-form:focus {
+#signup-form:focus {
     background-color: #333333;
     outline: #1db854;
 }
 
-#login-button {
+#signup-button {
     background-color: #1db854;
     border-radius: 20px;
     border: none;
@@ -62,7 +62,7 @@
     text-align: center;
 }
 
-#login-button:hover {
+#signup-button:hover {
     background-color: #1cd760;
     font-size: 12px;
     margin: 29px 2px;
